[package]
name = "inky"
version = "0.1.0"
edition = "2021"
description = "Low-level driver for Pimoroni Inky wHat e-ink display for Raspberry Pi"
license = "MIT"
documentation = "https://docs.rs/inky"
homepage = "https://github.com/novafacing/inky"
repository = "https://github.com/novafacing/inky"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
derive_builder = "0.12.0"
log = "0.4.17"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
plotters = "0.3.4"
rppal = "0.14.1"
